<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/mainlayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center"
android:background="#bbBBbb"
android:gravity="center_horizontal"
android:orientation="vertical" >

<!-- 1Banner
android:background="@drawable/nilogo"
android:background="@drawable/edit_text_red"

android:src="@drawable/gcbs" />               
 -->    
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content" >
             
<ImageView
android:id="@+id/imageView3"
android:layout_width="wrap_content"
android:layout_height="wrap_content"/>         
</LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="#999999"
android:maxHeight="8dp"
android:minHeight="3dp" 
android:textAlignment="center" >
</LinearLayout>
<!-- 2name -->
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="@drawable/border6" 
android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"   

android:text="Name (anonymisiert):  "
android:textSize="25sp" />
<EditText
android:id="@+id/name"
android:textSize="24dp"
android:background="@drawable/edit_text_design"           

android:layout_width="match_parent"
android:layout_height="wrap_content"
android:textStyle="bold"                       
android:maxLength="50"    
android:layout_marginRight="20dp" 
android:hint="zum Bsp.: ABN7905"                             
android:inputType="textPersonName" />
</LinearLayout>
<!-- 3Diagnose   
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="#111111"
android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:gravity="center"   
android:text="Diagnose ICD-10:          "
android:textSize="25sp" />
<EditText
android:id="@+id/dign"
android:background="@drawable/edit_text_design"
android:maxLength="40"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginRight="20dp"            
android:textStyle="bold"    
android:inputType="textPersonName" />
</LinearLayout>
android:background="@drawable/spinner_background"        
android:background="@drawable/spinner_background"  
android:background="@drawable/spinner_background"        
android:background="@drawable/spinner_background"        
android:background="@drawable/spinner_background"        
android:background="@drawable/spinner_background"        
-->
<!--  Diagnose2 -->       
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="@drawable/border6" 
android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView411"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:gravity="center"   
android:text="Diagnose:       "
android:textSize="25sp" />        
<Spinner
android:id="@+id/diagnoseIs"
android:background="@drawable/spinner_background" 
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginRight="20dp"
android:layout_marginLeft="100dp"   
android:prompt="@string/diagnoseP"             
android:entries="@array/diagnose"
/>        
</LinearLayout>    

<!-- 4ZmannFrau -->       
<LinearLayout
android:layout_width="match_parent"
android:background="@drawable/border6" 
android:layout_height="wrap_content"
android:gravity="center_vertical"

android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView3"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:gravity="center"   
android:text="Mann/Frau:    "
android:textSize="25sp" />      
<Spinner
android:id="@+id/genderIs"
android:background="@drawable/spinner_background" 
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginRight="20dp"
android:layout_marginLeft="100dp"        
android:entries="@array/mannfrau"
android:prompt="@string/mannfraup" />                  
</LinearLayout>       
<!-- 5Alter -->       
<LinearLayout
android:layout_width="match_parent"
android:background="@drawable/border6" 
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView4"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:gravity="center"   
android:text="Alter:               "
android:textSize="25sp" />        
<Spinner
android:id="@+id/ageIs"
android:background="@drawable/spinner_background" 
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginRight="20dp"
android:layout_marginLeft="100dp"   
android:prompt="@string/alterP"             
android:entries="@array/alter"
/>        
</LinearLayout>
<!-- 6Study -->   
<LinearLayout
android:layout_width="match_parent"
android:background="@drawable/border6" 
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView5"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:gravity="center"   
android:text="Studie:                       "
android:textSize="25sp" />
<Spinner
android:id="@+id/studyIs"
android:background="@drawable/spinner_background" 
android:maxLength="50"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="35dp"                       
android:layout_marginRight="20dp"           
android:prompt="@string/studyP"             
android:entries="@array/study" 
/>
</LinearLayout> 

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="@drawable/border6" 
android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView51"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:gravity="center"   
android:text="Arbeitsgruppe:        "
android:textSize="25sp" />
<Spinner
android:id="@+id/groupIs"
android:background="@drawable/spinner_background" 
android:maxLength="50"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="35dp"                       
android:layout_marginRight="20dp"           
android:prompt="@string/agroupP"             
android:entries="@array/agroup" 
/>
</LinearLayout> 
<!-- 7Study -->   
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="@drawable/border6" 
android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView6"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:gravity="center"   
android:text="Subject/Patient:      "
android:textSize="25sp" />
<Spinner
android:id="@+id/subjectIs"
android:background="@drawable/spinner_background" 
android:maxLength="50"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="35dp"                       
android:layout_marginRight="20dp"           
android:prompt="@string/subjectP"             
android:entries="@array/subject" 
/>
</LinearLayout>
<!-- 9Again -->   
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="@drawable/border6" 
android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView8"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:gravity="center"   
android:text="Wiederholer:            "
android:textSize="25sp" />
<Spinner
android:id="@+id/againIs"
android:background="@drawable/spinner_background" 
android:maxLength="50"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="35dp"                       
android:layout_marginRight="20dp"           
android:textStyle="bold"   
android:entries="@array/again"
android:prompt="@string/againP" />   
</LinearLayout>    
<!-- 8Study -->   
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="@drawable/border6" 
android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView7"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:gravity="center"   
android:text="Behandlung:             "
android:textSize="25sp" />
<Spinner
android:id="@+id/treatmentIs"
android:background="@drawable/spinner_background" 
android:maxLength="50"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="35dp"                       
android:layout_marginRight="20dp"           
android:prompt="@string/treatmentP"             
android:entries="@array/treatment" 
/>
</LinearLayout>
<!-- 8Study -->   
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="@drawable/border6" 
android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView17"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:gravity="center"   
android:text="Medikation:              "
android:textSize="25sp" />
<Spinner
android:id="@+id/pharmaIs"
android:background="@drawable/spinner_background" 
android:maxLength="50"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="35dp"                       
android:layout_marginRight="20dp"           
android:prompt="@string/pharmacologyP"             
android:entries="@array/pharmacology" 
/>
</LinearLayout>   
<!-- Dosierung -->   
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="@drawable/border6" 
android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView16"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:gravity="center"   
android:text="Dosierung:                "
android:textSize="25sp" />
<Spinner
android:id="@+id/doseIs"
android:background="@drawable/spinner_background" 
android:textSize="24dp"     
android:maxLength="50"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="35dp"                       
android:layout_marginRight="20dp"           
android:prompt="@string/doseP"             
android:entries="@array/dose" 
/>
</LinearLayout> 

<!-- 10 -->   
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="@drawable/border6" 
android:maxHeight="35dp"
android:minHeight="35dp" 
android:textAlignment="center" >
<TextView
android:id="@+id/textView21"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textStyle="bold"
android:gravity="center"   
android:text="Kommentar:                   "
android:textSize="25sp" />
<EditText
android:id="@+id/commentIs"
android:background="@drawable/edit_text_design"           
android:maxLength="50"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginRight="20dp"            
android:textStyle="bold"    
android:inputType="textPersonName" />
</LinearLayout>
<!-- 3 -->  
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="#999999"
android:maxHeight="8dp"
android:minHeight="3dp" 
android:textAlignment="center" >
</LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="#111111"
android:maxHeight="5dp"
android:minHeight="3dp" 
android:textAlignment="center" >
</LinearLayout>
<!-- 4 -->  

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:background="#555555"
android:maxHeight="30dp"
android:minHeight="20dp" 
android:textAlignment="center" >

<Button        
android:id="@+id/demo_collection_button"
android:text="@string/demo_collection"  
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:textSize="30dp" 
   style="@style/btnStyleBlackpearl"       
/>           
</LinearLayout>  
<!-- 4 -->  
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:background="#555555"
android:maxHeight="80dp"
android:minHeight="60dp" 
android:textAlignment="center" >

<Button
android:id="@+id/reset_button2"
android:text="@string/resetF"  
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:textSize="30dp"   
   style="@style/btnStyleBlackpearl"    
/>        
</LinearLayout> 
<!-- 4 -->  
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:background="#555555"
android:maxHeight="80dp"
android:minHeight="60dp" 
android:textAlignment="center" >

<Button
android:id="@+id/reset_button"
android:text="@string/reset"  
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:textSize="30dp"   
   style="@style/btnStyleBlackpearl"    
/>        
</LinearLayout> 
<!-- 5 -->

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:background="#555555"
android:maxHeight="400dp"
android:minHeight="400dp" 
android:textAlignment="center" >

</LinearLayout>

<TableLayout
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="#FFFFFF" >
<TextView 
android:id="@+id/TextView9" android:text="SurveyAPK"
android:layout_weight="1" android:background="#dcdcdc"
android:textColor="#000000"
android:padding="20dip" android:gravity="center"/>  
</TableLayout>

</LinearLayout>
